part5/kubescale/k8s/kubescale.yml
apiVersion: v1
kind: Service
metadata:
  name: kubescale
  labels:
    app: kubescale
spec:
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31980
  selector:
    app: kubescale
    tier: kubescale
  type: NodePort

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kubescale
  labels:
    app: kubescale
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kubescale
        tier: kubescale
    spec:
      containers:
      - image: 127.0.0.1:30400/kubescale:latest
        imagePullPolicy: Always
        name: kubescale
        ports:
        - containerPort: 3000
          name: kubescale
